--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 # Files to be ignored:
 
-# Ignore Zip File
+# Ignore zip file
 im.db
 
 # Ignore ipynb checkpoints
 .ipynb_checkpoints
+
+# Ignore DS store
+.DS_Store
